{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 416,
  "lineage": "64a547a5-e4c8-70ba-1e79-98332a830546",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-040e10ddbaf780d2f",
            "arn": "arn:aws:ec2:us-east-1:636964118289:instance/i-09fe5b989dbecdcb3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-20260408231306597200000001",
            "id": "i-09fe5b989dbecdcb3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06f74d9bad2a3c4b8"
              }
            ],
            "primary_network_interface_id": "eni-06f74d9bad2a3c4b8",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-3-228-17-106.compute-1.amazonaws.com",
            "public_ip": "3.228.17.106",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00a6371ca4f937857",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025d5f17519c2de5c",
            "tags": {
              "Name": "rag-ec2instanc"
            },
            "tags_all": {
              "Name": "rag-ec2instanc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0beba52ac61ec5be5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636964118289",
            "id": "i-09fe5b989dbecdcb3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.ec2_subnet",
            "aws_vpc.ec2_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ec2_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636964118289:internet-gateway/igw-0070a0d5a489d0ff6",
            "id": "igw-0070a0d5a489d0ff6",
            "owner_id": "636964118289",
            "region": "us-east-1",
            "tags": {
              "Name": "rag-igw"
            },
            "tags_all": {
              "Name": "rag-igw"
            },
            "vpc_id": "vpc-061ac4ee7140345d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ec2_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636964118289:route-table/rtb-0ad5f09f38fcce25c",
            "id": "rtb-0ad5f09f38fcce25c",
            "owner_id": "636964118289",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0070a0d5a489d0ff6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rag-routetable"
            },
            "tags_all": {
              "Name": "rag-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-061ac4ee7140345d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636964118289",
            "id": "rtb-0ad5f09f38fcce25c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ec2_gateway",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ec2_routeassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3cf1510394250ee",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad5f09f38fcce25c",
            "subnet_id": "subnet-025d5f17519c2de5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ec2_gateway",
            "aws_route_table.ec2_routetable",
            "aws_subnet.ec2_subnet",
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636964118289:security-group/sg-0beba52ac61ec5be5",
            "description": "Security Group to allow the communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beba52ac61ec5be5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "rag-sg",
            "name_prefix": "",
            "owner_id": "636964118289",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rag-sg"
            },
            "tags_all": {
              "Name": "rag-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061ac4ee7140345d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636964118289",
            "id": "sg-0beba52ac61ec5be5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636964118289:subnet/subnet-025d5f17519c2de5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025d5f17519c2de5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636964118289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "name": "rag-subnet"
            },
            "tags_all": {
              "name": "rag-subnet"
            },
            "vpc_id": "vpc-061ac4ee7140345d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636964118289",
            "id": "subnet-025d5f17519c2de5c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ec2_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636964118289:vpc/vpc-061ac4ee7140345d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f19a0d59755d105e",
            "default_route_table_id": "rtb-0a551cc98db9bf757",
            "default_security_group_id": "sg-09bf40b21bf0b1c13",
            "dhcp_options_id": "dopt-00513b93b16005410",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061ac4ee7140345d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a551cc98db9bf757",
            "owner_id": "636964118289",
            "region": "us-east-1",
            "tags": {
              "Name": "rag-vpc"
            },
            "tags_all": {
              "Name": "rag-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "636964118289",
            "id": "vpc-061ac4ee7140345d3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}